--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,12 +5,11 @@ def safeExtGet(prop, fallback) {
 buildscript {
     repositories {
         google()
-        mavenCentral()
-        jcenter()
+        maven { url 'https://artifactory.navkit-pipeline.tt3.com/artifactory/maven-remotes' }
     }
 
     dependencies {
-        classpath("com.android.tools.build:gradle:7.0.4")
+        classpath 'com.android.tools.build:gradle:4.2.1'
     }
 }
 
@@ -18,13 +17,17 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion safeExtGet('compileSdkVersion', 31)
-    buildToolsVersion safeExtGet('buildToolsVersion', '31.0.0')
+    buildToolsVersion safeExtGet('buildToolsVersion', '30.0.2')
 
     defaultConfig {
-        minSdkVersion safeExtGet('minSdkVersion', 24)
-        targetSdkVersion safeExtGet('targetSdkVersion', 31)
+        minSdkVersion safeExtGet('minSdkVersion', 23)
+        targetSdkVersion safeExtGet('targetSdkVersion', 29)
         versionCode 1
         versionName "1.0"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -34,4 +37,6 @@ repositories {
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
+//    implementation "com.facebook.react:react-native:${project.reactNativeVersion}"
+
 }
