--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ def safeExtGet(prop, fallback) {
 buildscript {
     repositories {
         google()
-        maven { url 'https://artifactory.navkit-pipeline.tt3.com/artifactory/maven-remotes' }
+        mavenCentral()
+        jcenter()
     }
 
     dependencies {
